--- a/Resume.html
+++ b/Resume.html
@@ -276,7 +276,7 @@ Ideathon Competition. </p>
                         <h4 class="experience-company-name "> Punjab Engineering College </h4>
                         <h5 class="experience-duration m0"> 2021-Present </h5>
 
-                        <p class="experience-description text-align-justify"> Majors in Computer Science and Engineering with Commulative CGPA of 6.21 till now. </p>
+                        <p class="experience-description text-align-justify"> Majors in Computer Science and Engineering with Commulative CGPA of 6.52 till 5th Semester. </p>
                     </div>
                 </div>
                 
@@ -380,7 +380,7 @@ Ideathon Competition. </p>
                     </div>
                     <div class="my-details-info-container">
                         <i class="far fa-envelope"></i>
-                        <span>jyotidixit1177@gmail.com</span>
+                        <span>jyotidixit172@gmail.com</span>
                     </div>
                 </div>
             </div>
